--- a/myShark/templates/@layout.latte
+++ b/myShark/templates/@layout.latte
@@ -10,26 +10,28 @@
  *}
 <!DOCTYPE html>
 <html>
-<head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-	<meta name="description" content="Nette Framework web application skeleton">
-	<meta name="robots" content="{$robots}" n:ifset="$robots">
+        <meta name="description" content="Nette Framework web application skeleton">
+        <meta name="robots" content="{$robots}" n:ifset="$robots">
 
-	<title>Nette Application Skeleton</title>
+        <title>Nette Application Skeleton</title>
 
-	<link rel="stylesheet" media="screen,projection,tv" href="{$basePath}/css/screen.css" type="text/css">
-	<link rel="stylesheet" media="print" href="{$basePath}/css/print.css" type="text/css">
-	<link rel="shortcut icon" href="{$basePath}/favicon.ico" type="image/x-icon">
+        <link  n:foreach="$styles as $style" rel="stylesheet" media="{$style[1]}" href="{$style[0]}" type="{$style[2]}">
+        
+        <link rel="shortcut icon" href="{$basePath}/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="{$basePath}/favicon.ico" type="image/vnd.microsoft.icon" />
 
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
-	<script type="text/javascript" src="{$basePath}/js/netteForms.js"></script>
-	{block head}{/block}
-</head>
+        <script n:foreach="$scripts as $script" type="text/javascript" src="{$script}"></script>
+        
+        {block head}{/block}
+    </head>
 
-<body>
-	<div n:foreach="$flashes as $flash" class="flash {$flash->type}">{$flash->message}</div>
-
-	{include #content}
-</body>
+    <body>
+        <div n:foreach="$flashes as $flash" class="flash {$flash->type}">{$flash->message}</div>
+        <div id="body">
+            {include #content}
+        </div>    
+    </body>
 </html>
