--- a/myShark/templates/Homepage/default.latte
+++ b/myShark/templates/Homepage/default.latte
@@ -11,7 +11,8 @@
 	<hr>
 
 	<h2>What to do next?</h2>
-
+        {snippet good}
+        <p>{$anyVariable}</p>
 	<ol>
 		<li><h3>Edit this page</h3>
 		<p>To change the content of this page, modify file <code>/app/templates/Homepage/default.latte</code> and layout
@@ -28,6 +29,7 @@
 		<p>If you are exploring Nette Framework for the very first time, you should start by reading the
 		<a href="http://doc.nette.org">documentation</a>, <a href="http://pla.nette.org">tutorials</a> and <a href="http://forum.nette.org">forum</a>.</p>
 	</ol>
+        {/snippet}
 
 	<h2>We hope you enjoy this framework! <img src="{$basePath}/images/nette-powered2.gif" width="80" height="15" alt="Nette Framework powered"></h2>
 
