dotvoreni page modules loading... pouze layout

--- a/myShark/templates/Homepage/default.latte
+++ b/myShark/templates/Homepage/default.latte
@@ -4,11 +4,11 @@
 <div id="wrapper">
         
         {snippet good}
-        <p>good - {$anyVariable}</p>
+        <p>good - {}</p>
         {/snippet}
 
         {snippet bad}
-        <p>bad - {$anyVariable}</p>
+        <p>bad - {}</p>
         {/snippet}
         
 </div>
