parsovani adresy a vytvoreni slotu atd.

--- a/myShark/templates/@layout.latte
+++ b/myShark/templates/@layout.latte
@@ -16,7 +16,7 @@
         <meta name="description" content="Nette Framework web application skeleton">
         <meta name="robots" content="{$robots}" n:ifset="$robots">
 
-        <title>Nette Application Skeleton</title>
+        <title>{$title}</title>
 
         <link  n:foreach="$styles as $style" rel="stylesheet" media="{$style[1]}" href="{$style[0]}" type="{$style[2]}">
         
