--- a/myShark/templates/@layout.latte
+++ b/myShark/templates/@layout.latte
@@ -25,7 +25,7 @@
 
         <script n:foreach="$scripts as $script" type="text/javascript" src="{$script}"></script>
         
-        {block head}{/block}
+        {include #head}
     </head>
 
     <body>
