opravy userModel chyby

--- a/myShark/templates/@layout.latte
+++ b/myShark/templates/@layout.latte
@@ -9,7 +9,7 @@
  * @param array    $flashes  flash messages
  *}
 <!DOCTYPE html>
-<html>
+<html lang="{$page['page']['activeLanguage']['shortcut']}">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
