vytvoreno okno pro login admin

--- a/myShark/templates/Homepage/default.latte
+++ b/myShark/templates/Homepage/default.latte
@@ -13,6 +13,13 @@
         {/foreach}
     </div>
             {/if}
+	
+			{if $page['login']}
+	<div class="window login">
+		PRIHLASIT
+	</div>
+			{/if}
+	
         {/snippet}
     
     
