kompletni admin prihlasovani

--- a/myShark/templates/Homepage/windows/login.latte
+++ b/myShark/templates/Homepage/windows/login.latte
@@ -1,8 +1,10 @@
 {* Okno pro příhlášení administrace *}
 
 {define loginWindow}
+	<div class="window login" data-myshark-windows-options="{syntax double}{width:400,height:200}{{/syntax}}">
 	{*form loginForm}
 	@todo vlastni layout pro formular
 	{/form*}
 	{$loginForm}
+	</div>
 {/define}
