--- a/myShark/templates/@layout.latte
+++ b/myShark/templates/@layout.latte
@@ -9,7 +9,7 @@
  * @param array    $flashes  flash messages
  *}
 <!DOCTYPE html>
-<html lang="{$page['page']['activeLanguage']['shortcut']}">
+<html lang="{ifset $page['page']['activeLanguage']['shortcut']}{$page['page']['activeLanguage']['shortcut']}{/ifset}">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
