--- a/myShark/templates/Homepage/windows/login.latte
+++ b/myShark/templates/Homepage/windows/login.latte
@@ -1,7 +1,7 @@
 {* Okno pro příhlášení administrace *}
 
 {define loginWindow}
-	<div class="window login" data-myshark-windows-options="{syntax double}{width:400,height:200}{{/syntax}}">
+	<div class="window login" id="snippet--login-window" data-myshark-windows-options="{syntax double}{width:400,height:200}{{/syntax}}">
 	{*form loginForm}
 	@todo vlastni layout pro formular
 	{/form*}
