--- a/myShark/templates/@layout.latte
+++ b/myShark/templates/@layout.latte
@@ -40,6 +40,7 @@
     </head>
 
     <body>
+        <div n:ifset="$setting['loadingBox']" id="loading-box"><div class="loading"></div></div>
         <div n:foreach="$flashes as $flash" class="flash {$flash->type}">{_$flash->message}</div>
         <div id="body">
             {include #content}
