--- a/www/css/screen.css
+++ b/www/css/screen.css
@@ -50,3 +50,25 @@ body {
 #windows {
 	display: none;
 }
+
+#flashes {
+    
+}
+
+.flash {
+    display: none;
+    width: 300px;
+    height: 100px;
+    position: absolute;
+    border: 1px solid black;
+    background-color: lightgrey;
+    left: 10px;
+    top: 10px;
+    z-index: 75;
+    padding: 10px 15px;
+}
+
+.error {
+    border: 1px solid darkred;
+    background-color: lightpink;
+}
