nove moznosti v menu modulu

--- a/www/css/modules/Menu.css
+++ b/www/css/modules/Menu.css
@@ -1,2 +1,12 @@
 /* style pro menu modul */
 
+.Menu .items .item {
+    list-style: none;
+    position: relative;
+}
+
+.Menu .items.fade-in {
+    position: absolute;
+    left: 0px;
+    top: 2px;
+}
