--- a/myShark/templates/Homepage/modules/Menu/default.latte
+++ b/myShark/templates/Homepage/modules/Menu/default.latte
@@ -8,7 +8,8 @@
         {if $items}
 			<ul n:if="$items" class="items">
 				{foreach $items as $item}
-				<li id="Menu-item-{$item['id_item']}" class="item link--{$item['link']}">
+				<li id="Menu-item-{$item['id_item']}" class="item link--{$item['link']} {$item['active']?'active':'inactive'} {$item['visible']?'visible':'invisible'}"
+				    data-myshark-sub_menu_type="{$item['subMenuType']}">
 					<a n:if="$item['reference']" href="{$item['reference']}" class="label">
 					{$item['text']}
 					</a>
