--- a/www/css/modules/Menu.css
+++ b/www/css/modules/Menu.css
@@ -7,6 +7,26 @@
 
 .Menu .items.fade-in {
     position: absolute;
-    left: 0px;
+    left: 10px;
     top: 2px;
+    z-index: 20;
+}
+
+.Menu .items .icon-href {
+    display: none;
+}
+.Menu .items .icon-href .image {
+    position: absolute;    
+}
+.Menu .items .move_menu_item .image {
+    right: 12px;
+    top: 1px;
+}
+.Menu .items .edit_menu_item .image {
+    right: 1px;
+    top: 1px;
+}
+
+.Menu .items .move_menu_item {
+    cursor: Move;
 }
