--- a/myShark/templates/Homepage/modules/Menu/default.latte
+++ b/myShark/templates/Homepage/modules/Menu/default.latte
@@ -12,7 +12,7 @@
 			<ul n:if="$items" class="items">
 				{foreach $items as $item}
 				<li id="Menu-item-{$item['id_item']}" class="item link--{$item['link']} {$item['active']?'active':'inactive'} {$item['visible']?'visible':'invisible'}"
-				    data-myshark-sub_menu_type="{$item['subMenuType']}">
+				    data-myshark-sub_menu_type="{$item['subMenuType']}" data-myshark-param="{$item['id_item']}">
 				    {if $moduleContent['canEdit']}
 					{getHtmlIconHref('edit-small', _t('Editovat položku'), 'edit_menu_item', $item['id_item'], 'admin')}
 					{getHtmlIconHref('move-small', _t('Přesunout položku'), 'move_menu_item', $item['id_item'], 'admin')}
