--- a/www/css/myshark/default/animate.css
+++ b/www/css/myshark/default/animate.css
@@ -1,7 +1,7 @@
 
 #loading-box {
     position: absolute;
-    background-image: url('../../images/backgrounds/black-transparent-15.png');
+    background-image: url('../../../images/backgrounds/black-transparent-15.png');
     margin: 0;
     z-index: 100;
     text-align: center;
@@ -14,7 +14,7 @@
     margin: auto;
     width: 300px;
     height: 300px;
-    background-image: url('../../images/animate/loading.gif');
+    background-image: url('../../../images/animate/loading.gif');
     background-position: center center;
     top: 25%;
 }
