--- a/myShark/templates/Homepage/modules/Menu/windows/editItem.latte
+++ b/myShark/templates/Homepage/modules/Menu/windows/editItem.latte
@@ -4,7 +4,7 @@
     {*snippet menu-window-edit*}
     <div id="snippet--menu-window-edit">
 	<div id="Menu-window-edit" class="window menu-window-edit" data-myshark-window-options="{json_encode(array('width' => 350, 'height' => 350))}">
-	    <form action="#" method="post">
+	    <form action="#" method="post" class="Menu-edit-item-form">
 	    <table class="menu-window-edit-table">
 		<tbody>
 		    <tr class="name-row">
