--- a/myShark/templates/Homepage/modules/Menu/default.latte
+++ b/myShark/templates/Homepage/modules/Menu/default.latte
@@ -3,42 +3,42 @@
 {define contentModuleMenu}
     {var $items = $moduleContent['items']}
 
-    <nav class="Menu">
+<nav class="Menu">
 	{if $moduleContent['canEdit']}
 	{getHtmlIconHref('edit', _t('Editovat menu'), 'edit_menu', $content['id_content'], 'admin')}
 	{/if}
 	{block MenuItems}
         {if $items}
-			<ul n:if="$items" class="items">
+	<ul n:if="$items" class="items">
 				{foreach $items as $item}
-				<li id="Menu-item-{$item['id_item']}" class="item link--{$item['link']} {$item['active']?'active':'inactive'} {$item['visible']?'visible':'invisible'}"
-				    data-myshark-sub_menu_type="{$item['subMenuType']}" 
-				    data-myshark-id="{$item['id_item']}"
+		<li id="Menu-item-{$item['id_item']}" class="item link--{$item['link']} {$item['active']?'active':'inactive'} {$item['visible']?'visible':'invisible'}"
+			data-myshark-sub_menu_type="{$item['subMenuType']}"
+			data-myshark-id="{$item['id_item']}"
 				    {if isAllowed('ModuleMenu_item', 'edit')} data-myshark-params="{json_encode($item)}" {/if}
-				    style="{if $item['geometry']['width'] != null}width: {$item['geometry']['width']};{/if
+			style="{if $item['geometry']['width'] != null}width: {$item['geometry']['width']};{/if
 					}{if $item['geometry']['height'] != null}height: {$item['geometry']['height']};{/if
 					}">
 				    {if $moduleContent['canEdit']}
 					{getHtmlIconHref('edit-small', _t('Editovat položku'), 'edit_menu_item', $item['id_item'], 'admin')}
 					{getHtmlIconHref('move-small', _t('Přesunout položku'), 'move_menu_item', $item['id_item'], 'admin')}
 				    {/if}
-				    <a n:if="$item['reference']" href="{$item['reference']}" class="label">
+			<a n:if="$item['reference']" href="{$item['reference']}" class="label">
 					{$item['text']}
-					</a>
-					<span n:if="!$item['reference']" class="label">
+			</a>
+			<span n:if="!$item['reference']" class="label">
 					{$item['text']}
-					</span>
+			</span>
 					{include #MenuItems, items => $item['items'], moduleContent => $moduleContent}
-				</li>
+		</li>
 				{/foreach}
-			</ul>
+	</ul>
         {/if}
     {/block}
     {block MenuWindows}
 	{includeblock ''._window('editItem')}
-	{include #editItemWindow}
+	{include '#editItemWindow_'.$content['id_content'], items => $items}
     {/block}
-	</nav>
+</nav>
 {/define}
 
 
