--- a/myShark/templates/Homepage/modules/Html/default.latte
+++ b/myShark/templates/Homepage/modules/Html/default.latte
@@ -1,6 +1,9 @@
 {* Šablona pro html modul *}
 
 {define contentModuleHtml}
+	{if $moduleContent['canEdit']}
+	{getHtmlIconHref('edit', _t('Editovat obsah'), 'edit_html', $content['id_content'], 'admin')}
+	{/if}
     {if $moduleContent['sections']}
         {foreach $moduleContent['sections'] as $section}
         <div class="wrapper-section link--{$section['link']}">
