--- a/myShark/templates/Homepage/modules/Menu/default.latte
+++ b/myShark/templates/Homepage/modules/Menu/default.latte
@@ -5,7 +5,8 @@
 
 <nav class="Menu">
 	{if $moduleContent['canEdit']}
-	{getHtmlIconHref('edit', _t('Editovat menu'), 'edit_menu', $content['id_content'], 'admin')}
+		{getHtmlIconHref('edit', _t('Editovat menu'), 'edit_menu', $content['id_content'], 'admin')}
+		{getHtmlIconHref('text-small', _t('Změnit název'), 'edit-icon edit_content_text', $content['id_content'], 'admin')}
 	{/if}
 	{block MenuItems}
         {if $items}
@@ -19,8 +20,8 @@
 					}{if $item['geometry']['height'] != null}height: {$item['geometry']['height']};{/if
 					}">
 				    {if $moduleContent['canEdit']}
-					{getHtmlIconHref('edit-small', _t('Editovat položku'), 'edit_menu_item', $item['id_item'], 'admin')}
-					{getHtmlIconHref('move-small', _t('Přesunout položku'), 'move_menu_item', $item['id_item'], 'admin')}
+					{getHtmlIconHref('edit-small', _t('Editovat položku'), 'edit-icon edit_menu_item', $item['id_item'], 'admin')}
+					{getHtmlIconHref('move-small', _t('Přesunout položku'), 'edit-icon move_menu_item', $item['id_item'], 'admin')}
 				    {/if}
 			<a n:if="$item['reference']" href="{$item['reference']}" class="label">
 					{$item['text']}
